Added API fun + basic UI
added Retrofit API functionality
edited models slightly to resolve type errors
upped min idk to kitkat to get transparent design
added basic google maps UI

--- a/JustParkTechTest/app/src/main/res/layout/activity_main.xml
+++ b/JustParkTechTest/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.joshuahughes.justparktechtest.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <fragment
+        android:name="com.joshuahughes.justparktechtest.fragments.MapFragment"
+        android:id="@+id/mapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_map" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:paddingTop="24dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Test api"
+            android:id="@+id/testApiButton" />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:id="@+id/responseTextView"
+            />
+
+    </LinearLayout>
+
 </RelativeLayout>
