--- a/JustParkTechTest/app/src/main/res/values/colors.xml
+++ b/JustParkTechTest/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="justParkPrimary">#26b13e</color>
+    <color name="justParkPrimaryDark">#1a7c2b</color>
 </resources>
