--- a/JustParkTechTest/app/src/main/res/values/styles.xml
+++ b/JustParkTechTest/app/src/main/res/values/styles.xml
@@ -12,5 +12,9 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowTranslucentStatus">true</item>
     </style>
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
 
 </resources>
