added google maps utils
added icon generation for results markers

--- a/JustParkTechTest/app/src/main/res/values/styles.xml
+++ b/JustParkTechTest/app/src/main/res/values/styles.xml
@@ -20,4 +20,8 @@
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
+
+    <style name="MarkerText" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textColor">@color/justParkPrimary</item>
+    </style>
 </resources>
