--- a/JustParkTechTest/app/src/main/res/layout/content_main.xml
+++ b/JustParkTechTest/app/src/main/res/layout/content_main.xml
@@ -18,8 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            >
+            android:layout_marginRight="16dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
