saving intense of map fragment and other Ui features
implemented parceable on response model classes
added marker click func
updated grade

--- a/JustParkTechTest/app/src/main/res/values/styles.xml
+++ b/JustParkTechTest/app/src/main/res/values/styles.xml
@@ -24,4 +24,7 @@
     <style name="MarkerText" parent="@android:style/TextAppearance.Medium">
         <item name="android:textColor">@color/justParkPrimary</item>
     </style>
+    <style name="MarkerTextSelected" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 </resources>
