--- a/JustParkTechTest/app/src/main/res/layout/activity_main.xml
+++ b/JustParkTechTest/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context="com.joshuahughes.justparktechtest.MainActivity">
 
     <include layout="@layout/content_main" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_gravity="bottom|end"
-        android:src="@drawable/ic_list_white_24dp"
-    />
+    <include layout="@layout/bottom_sheet"/>
+
 
 </android.support.design.widget.CoordinatorLayout>
 
