--- a/JustParkTechTest/app/src/main/res/layout/content_main.xml
+++ b/JustParkTechTest/app/src/main/res/layout/content_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:orientation="vertical"
     tools:context="com.joshuahughes.justparktechtest.MainActivity">
 
@@ -13,39 +14,47 @@
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_map" />
 
-        <android.support.v7.widget.CardView
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp">
+            android:layout_height="wrap_content">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" Demo Search"
+                android:id="@+id/testApiButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:drawableLeft="@drawable/places_ic_search"
+                android:layout_alignParentLeft="true"/>
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Demo Search"
-                    android:id="@+id/testApiButton"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:drawableLeft="@drawable/places_ic_search"
-                    android:layout_alignParentLeft="true"/>
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBar"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                />
 
-                <ProgressBar
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/progressBar"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
 
-
-
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_list_white_24dp"
+        />
 
 
 </RelativeLayout>
