added just park logo to splash

--- a/JustParkTechTest/app/src/main/res/drawable/splash_screen.xml
+++ b/JustParkTechTest/app/src/main/res/drawable/splash_screen.xml
@@ -1,5 +1,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/justParkPrimary"/>
+    <item>
+        <bitmap android:src="@drawable/justpark_logo"
+            android:gravity="center"/>
+    </item>
 
 
 </layer-list>
