--- a/JustParkTechTest/app/src/main/res/values/colors.xml
+++ b/JustParkTechTest/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="justParkPrimary">#26b13e</color>
+    <color name="justParkPrimary">#0AA400</color>
     <color name="justParkPrimaryDark">#1a7c2b</color>
 </resources>
