--- a/JustParkTechTest/app/src/main/res/layout/bottom_sheet.xml
+++ b/JustParkTechTest/app/src/main/res/layout/bottom_sheet.xml
@@ -19,7 +19,6 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Title"
             android:id="@+id/detailsTitle"
             android:gravity="center"
             android:textSize="18sp"
@@ -29,7 +28,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/detailsCategory"
-            android:text="category"
             android:gravity="center"
             android:paddingBottom="8dp"/>
 
@@ -37,7 +35,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/detailsPrices"
-            android:text="£7.00 per day / £40 per week"
             android:gravity="center"
             android:paddingBottom="8dp"/>
 
@@ -61,6 +58,7 @@
                     android:numStars="5"
                     android:progressTint="@android:color/holo_orange_light"
                     style="?android:attr/ratingBarStyleSmall"
+                    android:stepSize="0.5"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     />
@@ -68,7 +66,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/detailsRatingInfo"
-                    android:text="4.97 (15)"
                     android:gravity="center_horizontal"/>
 
             </LinearLayout>
@@ -89,7 +86,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/detailsDistance"
-                    android:text="200m"
                     android:gravity="center_horizontal"/>
 
             </LinearLayout>
@@ -110,7 +106,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/detailsSpaces"
-                    android:text="10 spaces"
                     android:gravity="center_horizontal"/>
 
             </LinearLayout>
